# ACE-PyQt

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_release.yml
config/: app_config.py  config_manager.py
ui/: main_window.py  styles.py
ui/components/: __init__.py  card_group_box.py  circle_button.py  custom_grips.py  custom_titlebar.py  modern_switch.py  navigation_tabs.py  resizable_window.py
ui/handlers/: event_handler.py
ui/managers/: dialog_manager.py  settings_manager.py  theme_manager.py  tray_manager.py  ui_manager.py  version_manager.py
utils/: build_exe.py  logger.py  version_checker.py
