[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ace-pyqt"
version = "0.1.0"
description = "使用 PyQt5 构建的桌面应用程序基础框架"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [{ name = "Cassianvale" }]
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15.0",
    "loguru>=0.7.0",
    "requests>=2.32.0",
    "PyYAML>=6.0.0",
    "psutil>=7.0.0",
    "pywin32>=310; sys_platform == 'win32'",
    "win32-setctime>=1.2.0; sys_platform == 'win32'",
    "windows-toasts>=1.3.0; sys_platform == 'win32'",
    "winrt-runtime>=3.2.0; sys_platform == 'win32'",
    "winrt-windows-data-xml-dom>=3.2.0; sys_platform == 'win32'",
    "winrt-windows-foundation>=3.2.0; sys_platform == 'win32'",
    "winrt-windows-foundation-collections>=3.2.0; sys_platform == 'win32'",
    "winrt-windows-ui-notifications>=3.2.0; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/Cassianvale/ACE-PyQt"
Repository = "https://github.com/Cassianvale/ACE-PyQt"
